--- a/disapp2.html
+++ b/disapp2.html
@@ -20,6 +20,7 @@
 	<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="js/fullscreen.js"></script>
 	<script type="text/javascript" src="js/jsondb.js"></script>
+	<script type="text/javascript" src="js/geolocation.js"></script>
 	<script type="text/javascript" src="js/htmlrequest.js"></script>
 	<script type="text/javascript" src="js/localstorage.js"></script>
 	<script type="text/javascript" src="js/openwin.js"></script>
