store Local Variable eMail SubmitURL corrected

--- a/disapp.html
+++ b/disapp.html
@@ -185,9 +185,10 @@
 			getCurrentGeolocation();
 			write4name2value("recdate",getDate());
 			write4name2value("moddate",getDate());
+			write4name2value("autonr","-");
 			write4name2value("username",vQueryHash["app_username"]);
 			write4name2value("email",vQueryHash["app_email"]);
 			write4name2value("database",vQueryHash["app_database"]);
 	</script>
-		/body>
+</body>
 </html>
