moddate is unde

--- a/disapp.html
+++ b/disapp.html
@@ -80,7 +80,7 @@
 							<input type='hidden' id='usergroup' name='usergroup' value=''>
 							<input type='hidden' id='recdate'  name='recdate' value=''>
 							<input type='hidden' id='sampledate' name='sampledate' value=''>
-							<input type='hidden' id='moddate' name='moddate' value=''>
+							<input type='hidden' id='moddate' name='moddate' value='---'>
 							<input type='hidden' name='autonr' value='1'>
                <input type='hidden' name='action' value='subscribeapp'>
                <input type='hidden' name='login' value=''>
