Remote Server maintained

--- a/disapp1.html
+++ b/disapp1.html
@@ -27,7 +27,7 @@
 	<script type="text/javascript" src="js/showhide.js"></script>
 	<script type="text/javascript" src="js/syncserver.js"></script>
 	<script type="text/javascript" src="js/writedom.js"></script>
-	<!-- script id="DissAppJSONDB" type="text/javascript" src="http://wwwmath1.uni-landau.de/cgi-bin/appdb/mailengine.cgi?action=jsondb&database=disapp.db&viewpwd=test2016"></script -->
+	<!-- script id="DissAppJSONDB" type="text/javascript" src="http://wwwmath1.uni.de/cgi-bin/appdb/mailengine.cgi?action=jsondb&database=disapp.db&viewpwd=test2016"></script -->
 	<script type="text/javascript">
 		var vDebug = 0;
 		var vQueryHash = readQueryParams();
