--- a/disapp.html
+++ b/disapp.html
@@ -8,8 +8,7 @@
       <link href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" rel="stylesheet" />
       <link href="css/ios_inspired.css" rel="stylesheet" />
       <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-      <script src="js/fullscreen.js"></script>
-      <script src="js/login.js"></script>
+      <script type="text/javascript" src="js/login.js"></script>
 			<script type="text/javascript" src="js/fullscreen.js"></script>
 			<script type="text/javascript" src="js/jsondb.js"></script>
 			<script type="text/javascript" src="js/geolocation.js"></script>
@@ -19,6 +18,7 @@
 			<script type="text/javascript" src="js/showhide.js"></script>
 			<script type="text/javascript" src="js/syncserver.js"></script>
 			<script type="text/javascript" src="js/writedom.js"></script>
+      <!-- Database JSON File -->
 			<script type="text/javascript" src="js/dbdisapp.js"></script>
 			<script>
          // all dialog buttons should close their parent dialog
@@ -75,7 +75,7 @@
          </div>
          <!-- /header -->
          <div data-role="content">
-            <form action="http://wwwmath1.uni-landau.de/cgi-bin/appdb/mailengine.cgi" >
+            <form id="fDBForm" action="http://www.example.com/cgi-bin/appdb/submitscript.php" >
 							<input type='hidden' id='app_email' name='email' value=''>
 							<input type='hidden' id='app_usergroup' name='usergroup' value=''>
 							<input type='hidden' id='app_recdate'  name='recdate' value=''>
@@ -190,6 +190,11 @@
 			write2value("app_usergroup",vQueryHash["app_usergroup"]);
 			write2value("app_email",vQueryHash["app_email"]);
 			write2value("app_database",vQueryHash["app_database"]);
+			if (vQueryHash["app_submiturl"]) {
+				document.getElementById("fDBForm").action = vQueryHash["app_submiturl"]
+			} else {
+				console.log("Submit URL was undefined!");
+			};
 	</script>
 </body>
 </html>
